final version cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -16,17 +16,17 @@
 </header>
 <div "about">
 <img src="images/face.jpg" alt="My photo">
-<p>Цель: получение должности пхп разработчика.</p> 
+<p>Цель: получение должности пхп разработчика.</p>
 
 <ul class="skills">
 <p class="about">Профессиональные навыки:</p>
 <li>знание методик и типов тестирования;</li>
 <li>знание жизненного цикла бага;</li>
-<li>написание тест-кейсов, тест-наборов и их 
+<li>написание тест-кейсов, тест-наборов и их
   поддержка;</li>
 <li>работа с системами отслеживания ошибок: Jira
   Redmine;</li>
-<li>начальный уровень работы с Selenium WebDriver, 
+<li>начальный уровень работы с Selenium WebDriver,
   PhantomJS;</li>
 <li>базовый уровень HTML, CSS;</li>
 <li>базовый уровень Java SE;</li>
@@ -35,15 +35,15 @@
 <li>начальный уровень работы с системой контроля версий Git.</li>
 </ul>
 <ul class="self">
-<p class="about">Личные качества:</p> 
-<li>усидчивость, 
-<li>любознательность, 
-<li>ответственность, 
-<li>пунктуальность. 
+<p class="about">Личные качества:</p>
+<li>усидчивость,
+<li>любознательность,
+<li>ответственность,
+<li>пунктуальность.
 <li>Готовность выслушать и морально поддержать коллег в трудные минуты в рабочих и личных вопросах.
 </ul>
-<ul class="languages"><p class="about">Языки:</p> 
-<li>Украинский, русский – свободно.</li> 
+<ul class="languages"><p class="about">Языки:</p>
+<li>Украинский, русский – свободно.</li>
 <li>Английский – Intermediate.</li>
  </ul>
 <ul class="education"><p class="about">Образование:</p>
@@ -59,17 +59,17 @@
 	<th>Должность</th>
 </tr>
 <tr>
-	<td>июнь – август 2011</td> 
-	<td rowspan="3">ООО «Смелянский сахарный завод»</td> 
-	<td>микробиолог</td>  
+	<td>июнь – август 2011</td>
+	<td rowspan="3">ООО «Смелянский сахарный завод»</td>
+	<td>микробиолог</td>
 </tr>
 <tr>
 <td>август 2011 – 2014</td>
 <td> заведующий лаборатории</td>
 </tr>
 <tr>
-<td>2014 – настоящее время</td>  
-<td> технолог</td> 
+<td>2014 – настоящее время</td>
+<td> технолог</td>
 </tr>
 </table>
 
@@ -80,6 +80,8 @@
 <p>г. Смела, Черкасская обл., Украина</p>
 <p>066-710-28-12</p>
 <p>ky_se_se@mail.ru</p>
+<p class="social"><a href="https://www.facebook.com/profile.php?id=100010924410859"><img  src="images/facebook.png" alt="facebook"></a>
+	 <a href="https://vk.com/id380662574"><img  src="images/vk.png" alt="vk"></a> </p>
 </div>
 </footer>
 </div>
